# fastapi-cookbook

./: .gitignore  README.md
ch-1/: hello.py  pyproject.toml
ch-2/: hello.py  pyproject.toml
ch-3/: hello.py  pyproject.toml
ch-4/: github_login.py  hello.py  main.py  mfa.py  models.py  operations.py  premium_access.py  pyproject.toml  rbac.py  security.py  third_party_login.py
ch-5/: locustfile.py  pyproject.toml  pytest.ini  run_server.py
ch-5/protoapp/: db.py  logging.py  main.py
ch-5/tests/: conftest.py  test_main.py
ch-6/: hello.py  pyproject.toml
ch-6/alembic/versions/: 1f92371194fe_add_ticketdetails_events_sponsors.py  e1d1d6398762_database_initialization.py  e5b9f4e9cb88_initial_migration.py
ch-6/app/: db.py  db_connection.py  main.py  operations.py  schemas.py
ch-7/: hello.py  pyproject.toml
ch-7/streaming/: insert_songs.py  songs.py
ch-7/streaming/app/: db.py  main.py  models.py  schemas.py
ch-7/streaming/scripts/: insert_songs.py
ch-8/: pyproject.toml
ch-8/app/: dependencies.py  main.py
ch-8/tests/: test_main.py
ch-9/: pyproject.toml
