[project]
name = "ch-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.8",
    "httpx>=0.28.1",
    "locust>=2.32.8",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "sqlalchemy>=2.0.37",
]
