[project]
name = "ch-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "cryptography>=44.0.0",
    "fastapi[all]>=0.115.8",
    "greenlet>=3.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "sqlalchemy>=2.0.38",
]
