[project]
name = "ch-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "elasticsearch>=8.17.1",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[all]>=0.115.8",
    "motor>=3.7.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
