[project]
name = "ch-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pyinstrument>=5.0.1",
    "pytest>=8.3.4",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.0",
]
